# homework_19.2

./: .gitignore  README.md  pyproject.toml
catalog/: urls.py
catalog/migrations/: urls.py
config/: settings.py  urls.py  wsgi.py
